k8s/nginx-storage.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-storage

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx-storage

  template:
    metadata:
      labels:
        app: nginx-storage

    spec:
      containers:
        - name: nginx

          image: nginx:latest

          ports:
            - containerPort: 80

          volumeMounts:
            - name: storage
              mountPath: /usr/share/nginx/html

      volumes:
        - name: storage

          persistentVolumeClaim:
            claimName: nginx-pvc
